<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/fellButtonHolder">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:gravity="right"
                    android:text="@string/account_number"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tvCIAccountNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tvCIRateCode"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|top"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tvCIMultiplier"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|top"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:gravity="right"
                    android:text="@string/name"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tvCIName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="15dp"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:gravity="right|top"
                    android:text="@string/address"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tvCIAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="15dp"
                    android:textSize="20sp" />
            </LinearLayout>
    
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:gravity="right|top"
                    android:text="@string/cmreading"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="15dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/tvCICMInitialReading"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_weight=".5"
                        android:gravity="right"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/tvCICMReading"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_weight=".5"
                        android:gravity="right"
                        android:textSize="20sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:gravity="right|top"
                    android:text="@string/cmreading"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tvCICMKilowatthour"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="15dp"
                	android:gravity="right"
                    android:textSize="20sp" />
            </LinearLayout>
    
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:gravity="right|top"
                    android:text="@string/initialreading"
                    android:textSize="19sp" />

                <TextView
                    android:id="@+id/tvCIInitialReading"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="5dp"
                    android:gravity="right"
                    android:textSize="20sp" />
            </LinearLayout>
    
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:gravity="center_horizontal"
                    android:text="@string/fieldfindingcode"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/etFFEFieldFindingsCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="5dp"
                    android:maxLength="2"
                    android:inputType="textCapCharacters"
                    android:gravity="right"
                    android:textSize="20sp"
                    android:nextFocusDown="@+id/spnFieldFindings"
                    android:selectAllOnFocus="true"/>
            </LinearLayout>
    
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:gravity="center_horizontal"
                    android:text="@string/fieldfinding"
                    android:textSize="19sp" />

                <Spinner
                    android:id="@+id/spnFieldFindings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="5dp"
                    android:gravity="right"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:gravity="right|top"
                    android:text="@string/remarks"
                    android:textSize="17sp" />

                <EditText
                    android:id="@+id/etFFERemarks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="5dp"
                    android:gravity="right"
                	android:inputType="text"
                    android:textSize="20sp" />
            </LinearLayout>
    
        </LinearLayout>
    </ScrollView>

    <LinearLayout
            android:id="@+id/fellButtonHolder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal" >

        <Button
                android:id="@+id/bfConfirm"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight=".5"
                android:text="@string/btnconfirm"
                android:textSize="20sp"/>

        <Button
                android:id="@+id/bfCancel"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight=".5"
                android:text="@string/btncancel"
                android:textSize="20sp"/>

    </LinearLayout>

</RelativeLayout>