<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView 
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:src="@drawable/search"/>

        <EditText
            android:id="@+id/etslSearch"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:inputType="text"
            android:textSize="20sp" />
    </LinearLayout>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="0.62"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="5dp"
                    android:gravity="center"
                    android:text="@string/clAccountNumber"
                    android:textSize="20sp" />

                <TextView 
                    android:layout_width="120dp"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="5dp"
                    android:gravity="center"
                    android:text="Pole Number"
                    android:textSize="20sp"/>
                <TextView
                    android:layout_width="160dp"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="5dp"
                    android:gravity="center"
                    android:text="@string/clName"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="160dp"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="5dp"
                    android:gravity="center"
                    android:text="@string/clAddress"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="5dp"
                    android:gravity="center"
                    android:text="@string/clMeterSerial"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="5dp"
                    android:gravity="center"
                    android:text="@string/clKilowatthour"
                    android:textSize="20sp" />
                <!-- 
                <TextView 
                    android:layout_width="120dp"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:layout_marginLeft="5dp"
                    android:text="CurrBill"
                    android:textSize="20sp"/>
                <TextView 
                    android:layout_width="120dp"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:layout_marginLeft="5dp"
                    android:text="Total Bill"
                    android:textSize="20sp"/>
                     -->
                <TextView 
                    android:layout_width="80dp"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:layout_marginLeft="5dp"
                    android:text="@string/conStatus"
                    android:textSize="20sp"/>
            </LinearLayout>

            <ListView
                android:id="@android:id/list"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" >
            </ListView>
        </LinearLayout>
    </HorizontalScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".33"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="Total Read : "
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvslTotalRead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".77"
            android:gravity="center_vertical|right"
            android:paddingRight="20dp"
            android:text="test"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".33"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="Total Unread : "
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvslTotalUnread"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".77"
            android:gravity="center_vertical|right"
            android:paddingRight="20dp"
            android:text="test"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".33"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="Total Record : "
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvslTotalRecord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".77"
            android:gravity="center_vertical|right"
            android:paddingRight="20dp"
            android:text="test"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>